# visiongui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: main.py
src/visiongui/: fixture_voltar_ao_vscode.py  save_file.py
src/visiongui/driver/: DesktopDriverImplementation.py  DesktopDriverInterface.py  DesktopDriverWindowsImplementation.py  close.py  exception.py  find_element_by_image.py  find_window.py  launch_process.py  save_debug_screenshot.py  switch_to.py  take_screenshot.py  wait.py  wait_for_window_to_disappear.py
src/visiongui/element/: ActionClickOptions.py  ActionTypeOptions.py  ClickOverlayOptions.py  DesktopElementImplementation.py  DesktopElementInterface.py  action_click.py  action_type.py  click_overlay.py  get_center_coordinates.py
tests/: conftest.py
tests/demo/: test__main.py
tests/driver/: test_close.py  test_find_element_by_image.py  test_find_window.py  test_switch_to.py  test_wait.py  test_wait_for_window_to_disappear.py
tests/element/: test_action_click.py  test_action_type.py
tests/fixtures/: HasTestContext.py  HasTestContextDesktopDriver.py  HasTestContextDesktopDriverWithDummyGuiAppWithButtonLabelTextWereNo.py  HasTestContextDesktopDriverWithGuiAppFilePath.py  setup_common_paths.py
